fixed title text alignment

--- a/contactme/ty.css
+++ b/contactme/ty.css
@@ -22,6 +22,7 @@ body {
 	margin: 5% 10% 0 10%;
 	color: #4D724D;
 	background-color: #F5F5F5;
+	text-align: center;
 }
 
 h1 {
