--- a/learningresources/lr.css
+++ b/learningresources/lr.css
@@ -16,10 +16,13 @@ body {
 #title-container {
 	display: flex;
 	justify-content: center;
+	padding-top: .6em;
 	padding: .6em 0 .3em 0;
 	background-color: #F5F5F5;
 	color: #4D724D;
 	font-family: satoshi-bold;
+	text-wrap: wrap;
+	text-align: center;
 }
 
 #title-sub-container {
