--- a/olympiadresources/or.css
+++ b/olympiadresources/or.css
@@ -21,6 +21,8 @@ body {
 	background-color: #F5F5F5;
 	color: #4D724D;
 	font-family: satoshi-bold;
+	text-wrap: wrap;
+	text-align: center;
 }
 
 #olympiad-nav {
