--- a/research/r.css
+++ b/research/r.css
@@ -49,6 +49,8 @@ body {
 	background-color: #F5F5F5;
 	color: #4D724D;
 	font-family: satoshi-bold;
+	text-wrap: wrap;
+	text-align: center;
 }
 
 #navbar-container {
